# local-first-inference-gateway

./: .gitignore  README.md  pyproject.toml  routing.yaml
docs/: API.md  BENCHMARK_FEEDBACK.md  BENCHMARK_RESULTS.md  DECISIONS.md  OPERATIONS.md  ROADMAP.md
scripts/: bench_stage9_core.py  bench_stage9_dataset.json  bench_stage9_hard_dataset.json  bench_stage9_quality_deep.py  bench_stage9_report.py  benchmark_stage9.py  deployment_swap.ps1  execution_security.ps1  install_stage6.ps1  run_chat_ollama.ps1  run_embedding_ollama.ps1  run_gateway.ps1  run_monitor.ps1  run_watchdog.ps1  show_stage6_status.ps1  stage6_tasks.ps1  supervisor_common.ps1  task_control.ps1  verification_auth.py  verify_monitor.py  verify_stage1.py  verify_stage2.py  verify_stage3.py  verify_stage4.py  verify_stage5.py  verify_stage6.py  verify_stage7.py  verify_stage9.py
src/gateway/: api_keys.py  circuit_breaker.py  config.py  deadline.py  embeddings.py  errors.py  file_io.py  key_cli.py  main.py  middleware.py  observability.py  openai_fallback.py  paths.py  public_docs.py  relay.py  relay_common.py  responses.py  routing.py  (+3 more)
tests/: conftest.py  test_api_keys.py  test_bench_stage9_core.py  test_bench_stage9_quality_deep.py  test_circuit_breaker.py  test_deadlines.py  test_embeddings.py  test_fallback.py  test_health.py  test_http_boundary.py  test_monitor_app.py  test_monitor_metrics.py  test_monitor_probes.py  test_observability.py  test_relay.py  test_response_classification.py  test_responses.py  test_routing.py  test_run_embedding_ollama.py  test_stage6_scripts.py  test_watchdog.py
(+5 files in other folders)
