[project]
name = "local-first-inference-gateway"
version = "0.1.0"
description = "OpenAI 호환 추론 게이트웨이 — 홈 GPU의 Ollama를 중계한다"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gateway"

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "asgi-lifespan>=2.1.0",
    "openai>=2.44.0",
    "pytest>=9.1.1",
    "respx>=0.23.1",
    "ruff>=0.15.20",
]
